# Triagen

./: README.md  TODO.md  wrangler.toml
backend/: .env.example  engine.py  fbc_guidance.ipynb  fbc_guidance.py  main.py  ocr.py  pyproject.toml  server.py
backend/database/: connection.py  migrate.py
backend/database/debug/: test.png_gemini_results.txt  woundcare.png_gemini_results.txt  woundcare.png_ocr_results.txt
backend/database/format/: formattest.png.json  woundcare.json
backend/format/: format1.json  format1.txt
backend/protocol/: fbc_guidance.json
bold-wave-3e3e/: package.json  wrangler.jsonc
frontend/: components.json  package-lock.json  package.json
frontend/src/api/upload/: route.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/upload/: route.ts
frontend/src/app/cases/: page.tsx
frontend/src/app/components/: header.tsx
frontend/src/app/map/: page.tsx
frontend/src/components/: all-cases.tsx  header.tsx  recent-cases.tsx  sidebar.tsx  week-chart.tsx
